--- a/N8N/Dockerfile
+++ b/N8N/Dockerfile
@@ -3,9 +3,9 @@ FROM node:22-alpine
 # Set working directory
 WORKDIR /app
 
-# Install n8n globally and rclone
+# Install n8n globally, rclone, and redis
 RUN npm install -g n8n && \
-    apk add --no-cache rclone
+    apk add --no-cache rclone redis
 
 # Create data directory and set permissions
 RUN mkdir -p /home/node/.n8n /home/node/.config/rclone && \
@@ -23,9 +23,13 @@ ENV N8N_PORT=5678
 ENV N8N_RUNNERS_ENABLED=true
 ENV N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
 
+ENV N8N_HOST=loko99-n8n.hf.space
+ENV N8N_PROTOCOL=https
+ENV WEBHOOK_URL=https://loko99-n8n.hf.space
+
 # Expose port
 EXPOSE 5678
-
+EXPOSE 6379
 
 # Start with backup script
 CMD sh startup.sh
